<resources>
    <string name="app_name">Espresso-doppio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="splash_text">Splashscreen\'s bad and you should feel bad!</string>
    <string name="start_dialog_button_text">Start dialog</string>
    <string name="loading_stuff">loading stuff…</string>
    <string name="progress_loading">Loading…</string>
    <string name="select_item_info">Select item from list</string>
    <string name="app_icon_content_description">App icon in nav bar</string>
    <string name="drawer_import">Import</string>
    <string name="drawer_gallery">Gallery</string>
    <string name="drawer_slideshow">Slideshow</string>
    <string name="drawer_tools">Tools</string>
    <string name="drawer_communicate">Communicate</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_send">Send</string>
    <string name="drawer_nav_header">Android Studio</string>
    <string name="drawer_nav_header_email">android.studio@android.com</string>
    <string name="dummy_text">some dummy text</string>
</resources>
